Añadiendo diseño de lazycolumn

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="mainSv">#003865</color>
     <color name="redone">#9649CB</color>
 
+    <color name="grey">#202124</color>
+
 
 
 </resources>
